lustre/ptlrpc/import.c
@@ -456,31 +456,12 @@ void ptlrpc_fail_import(struct obd_import *imp, __u32 conn_cnt)
 
 int ptlrpc_reconnect_import(struct obd_import *imp)
 {
-#ifdef CONFIG_LUSTRE_FS_PINGER
-	long timeout_jiffies = cfs_time_seconds(obd_timeout);
-	int rc;
+	int rc = 0;
+	ENTRY;
 
-	ptlrpc_pinger_force(imp);
-
-	CDEBUG(D_HA, "%s: recovery started, waiting %u seconds\n",
-	       obd2cli_tgt(imp->imp_obd), obd_timeout);
-
-	rc = wait_event_idle_timeout(imp->imp_recovery_waitq,
-				     !ptlrpc_import_in_recovery(imp),
-				     timeout_jiffies);
-	if (rc == 0)
-		rc = -ETIMEDOUT;
-	else
-		rc = 0;
-	CDEBUG(D_HA, "%s: recovery finished s:%s\n", obd2cli_tgt(imp->imp_obd),
-	       ptlrpc_import_state_name(imp->imp_state));
-	return rc;
-#else
-	ptlrpc_set_import_discon(imp, 0, false);
+	ptlrpc_set_import_discon(imp, 0, true);
 	/* Force a new connect attempt */
 	ptlrpc_invalidate_import(imp);
-	/* Do a fresh connect next time by zeroing the handle */
-	ptlrpc_disconnect_import(imp, 1);
 	/* Wait for all invalidate calls to finish */
 	if (atomic_read(&imp->imp_inval_count) > 0) {
 		int rc;
@@ -495,12 +476,11 @@ int ptlrpc_reconnect_import(struct obd_import *imp)
 
 	/* Allow reconnect attempts */
 	imp->imp_obd->obd_no_recov = 0;
-	/* Remove 'invalid' flag */
-	ptlrpc_activate_import(imp, false);
+	imp->imp_remote_handle.cookie = 0;
 	/* Attempt a new connect */
-	ptlrpc_recover_import(imp, NULL, 0);
-	return 0;
-#endif
+	rc = ptlrpc_recover_import(imp, NULL, 0);
+
+	RETURN(rc);
 }
 EXPORT_SYMBOL(ptlrpc_reconnect_import);
 
