lustre/ptlrpc/pinger.c
@@ -254,10 +254,14 @@ static void ptlrpc_pinger_process_import(struct obd_import *imp,
 	if (level == LUSTRE_IMP_DISCON && !imp_is_deactive(imp)) {
 		/* wait for a while before trying recovery again */
 		imp->imp_next_ping = ptlrpc_next_reconnect(imp);
-		spin_unlock(&imp->imp_lock);
 		if (!imp->imp_no_pinger_recover ||
-		    imp->imp_connect_error == -EAGAIN)
-			ptlrpc_initiate_recovery(imp);
+		    imp->imp_connect_error == -EAGAIN) {
+			CDEBUG(D_HA, "%s: starting recovery\n",
+			       obd2cli_tgt(imp->imp_obd));
+			ptlrpc_connect_import_locked(imp);
+		} else {
+			spin_unlock(&imp->imp_lock);
+		}
 	} else if (level != LUSTRE_IMP_FULL || imp->imp_obd->obd_no_recov ||
 		   imp_is_deactive(imp)) {
 		CDEBUG(D_HA,
